CSS: fixed z-index for image list hover and image-buttons

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -388,7 +388,7 @@ body {
 		bottom: 120px;
 		left: 40px;
 
-		z-index: 20;
+		z-index: 50;
 
 		button {
 			display: block;
@@ -496,7 +496,7 @@ body {
 			width: 100%;
 			height: 100%;
 
-			z-index: 20;
+			z-index: 30;
 		}
 
 		.grid-title {
@@ -515,7 +515,7 @@ body {
 			line-height: 2.8rem;
 			text-align: center;
 
-			z-index: 10;
+			z-index: 20;
 
 			opacity: 0;
 
@@ -529,7 +529,7 @@ body {
 		&:hover {
 			box-shadow: 0 2px 45px 15px rgba(0, 0, 0, 0.6);
 
-			z-index: 100;
+			z-index: 30;
 
 			.transform(scale(1.1));
 
